[gd_scene load_steps=10 format=2]

[ext_resource path="res://Level 2/base.png" type="Texture" id=1]
[ext_resource path="res://Level 2/Level 2.gd" type="Script" id=2]
[ext_resource path="res://Level 2/puerta izq.png" type="Texture" id=3]
[ext_resource path="res://Level 2/puerta centro.png" type="Texture" id=4]
[ext_resource path="res://Level 2/puerta der.png" type="Texture" id=5]
[ext_resource path="res://Level 2/lampara.png" type="Texture" id=6]
[ext_resource path="res://assets/ganaste.png" type="Texture" id=7]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Control" type="Node"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="LeftDoorButton" type="TextureButton" parent="."]
margin_left = -61.0
margin_top = 132.0
margin_right = 285.0
margin_bottom = 603.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightDoorButton" type="TextureButton" parent="."]
margin_left = 754.0
margin_top = 121.0
margin_right = 1100.0
margin_bottom = 592.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiddleDoorButton" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 176.0
margin_right = 709.0
margin_bottom = 518.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 523, 306 )
scale = Vector2( 0.887097, 0.97 )
texture = ExtResource( 6 )

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionLayer"]
anims/RESET = SubResource( 3 )
anims/transition = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="FinalImage" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="LeftDoorButton" to="." method="_on_LeftDoorButton_button_up"]
[connection signal="button_up" from="RightDoorButton" to="." method="_on_RightDoorButton_button_up"]
[connection signal="button_up" from="MiddleDoorButton" to="." method="_on_MiddleDoorButton_button_up"]
[connection signal="animation_finished" from="TransitionLayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
